# re_toolbox_uw

./: .dockerignore  Cargo.toml  Dockerfile  README.md
examples/: timestamp.bc  wifi.bc  wifi_new.bc
plugins/: clang_format.yml  comcat.yml  degpt.yml  demangle.yml  ghidra.yml  klee.yml
src/: main.rs  workspace.rs
src/compiler/: mod.rs
src/decompiler/: angr.rs  ghidra.rs  mod.rs
src/decompilers/: angr.rs  ghidra.rs  mod.rs
src/file/: format.rs  load.rs  mod.rs  save.rs
src/tool/: mod.rs  subcommand.rs
src/tools/: binthoven.rs  clang_format.rs  mod.rs
tools/: clang_format.py
tools/angr/: decomp.py  list_functions.py
tools/binthoven/: binthoven.py
tools/comcat/: ComCat.py  Pipfile  cparser.py  utils.py
tools/degpt/: Pipfile  chat_log.json  config.py  run_degpt.py
tools/degpt/DeGPT/: chat_log.json
tools/degpt/DeGPT/degpt/: chat.py  prompt.json  role.py
tools/demangle/: Pipfile  demangle.py
tools/ghidra/ghidra_11.2.1_PUBLIC/Ghidra/Debug/Debugger-agent-dbgeng/pypkg/src/ghidradbg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/ghidra/ghidra_11.2.1_PUBLIC/Ghidra/Debug/Debugger-agent-gdb/pypkg/src/ghidragdb.egg-info/: PKG-INFO  requires.txt
tools/ghidra/ghidra_11.2.1_PUBLIC/Ghidra/Debug/Debugger-agent-lldb/pypkg/src/ghidralldb.egg-info/: PKG-INFO
tools/ghidra/ghidra_11.2.1_PUBLIC/Ghidra/Debug/Debugger-rmi-trace/pypkg/src/ghidratrace.egg-info/: PKG-INFO
tools/ghidra/scripts/: DecompileFunctionH.java  ListFunctionsH.java
tools/klee/: Pipfile  klee.py
