[package]
name = "re_toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features=["derive", "env", "string"] }
clap-repl = "0.3.1"
clio = "0.3.5"
dotenv = "0.15.0"
once_cell = "1.20.3"
reedline = "0.38.0"
tempfile = "3.16.0"
walkdir = "2.5.0"
yaml-rust2 = "0.10.0"
